coded all streams